# mcm-cryoet

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt  setup.py
apps/: CMakeLists.txt  geodesic.c  mcm.c  mcm_levelset.c
include/: libmcm.h  libmcm_cuda.cuh
pymcm/: CMakeLists.txt  __init__.py  _pymcm.pyx  _pymcm_cuda.pyx  emfile.py  mcm.py
scripts/: geodesic_trace.py  mcm_3D.py  mcm_close.py  mcm_levelset.py  mcm_open.py
src/: CMakeLists.txt
src/mcm/: CMakeLists.txt  combi.c  combi.h  emfile.c  emfile.h  emheader.h  geodesic.c  geodesic.h  libmcm.c  mcm.c  mcm.h  nrutil.c  util.c  util.h
src/mcm_cuda/: CMakeLists.txt  combi.cu  combi.cuh  geodesic.cu  geodesic.cuh  libmcm_cuda.cu  mcm.cu  mcm.cuh  util.cu  util.cuh
